syntax = "proto3";
option go_package = "github.com/KKogaa/grpc-producer/internal/adapters/outbound/grpc_pb";

package grpc_pb;

service TransactionService {
  rpc CreateTransaction (CreateTransactionRequest) returns (CreateTransactionResponse);
}

message CreateTransactionRequest {
  string id = 1;
  string user_id = 2;
  string amount = 3;
}

message CreateTransactionResponse {
  string id = 1;
  string user_id = 2;
  string amount = 3;
}


